package com.vivianhonghoa.chess.model.events;

public class GameEngineEvent {

}
