package com.vivianhonghoa.chess.model.events;

public class HistoryEvent {

    public HistoryEvent() {
        
    }

}

